--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "blog",
+  "version": "1.0.0",
+  "description": "blog-api",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server",
+    "dev": "nodemon server"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
