--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "blog-api",
+  "proxy": "https://client-yza1.onrender.com",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
